Added alt attribute to hero tag for search engine optimization

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </div>
-    <div class="hero"></div>
+    <div class="hero" alt="Team Photo"></div>
     <div class="content">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
